# Knowlia-app

./: .gitignore  BUILD_FIX.md  README.md  android-setup-guide.md  build-windows.bat  build-windows.ps1  debug_install.bat  decode_test.js  index.html  install-deps.bat  install-deps2.bat  install_fix.bat  package.json  pnpm-lock.yaml  pnpm-lock.yaml.3685549322  setup-android.bat  tailwind.config.ts  test-avatar-import.js  test_decode.html  test_neighbours.js  vite.config.ts
.agent/workflows/: clean-build.md
.github/workflows/: main.yml
components/: ActionPanel.svelte  AlertModal.svelte  AsMcpServer.svelte  AssistantEnabledIcon.svelte  AutoRefresh.svelte  BanditStatsPanel.svelte  CloseAppButton.svelte  ConfigForm.svelte  DeveloperSection.svelte  InfoTooltip.svelte  LocalToolsCard.svelte  McpServerCard.svelte  ModelConfigSection.svelte  ResultDisplay.svelte  ToolsManagement.svelte  UnderConstructionSection.svelte  WindowInfoPanel.svelte
components/avatar/: ChatCloud.svelte  DefaultAvatar.svelte  MarkdownBlock.svelte  NotificationCircle.svelte  SendMessage.svelte  Thinking.svelte
components/ui/button/: button.svelte
components/ui/slider/: slider.svelte
ded/: .gitignore  Cargo.toml  tauri.conf.json
ded/src/: background_tasks.rs  boltt.rs  helpers.rs  lib.rs  logging.rs  main.rs  ocr.rs  timetable.rs  window_manager.rs
ded/src/commands/: flight.rs  mod.rs  zotero.rs
ded/src/contextual_bandit/: context.rs  mod.rs
ded/src/embedding/: mod.rs  service.rs
ded/src/llm/: chat.rs  client.rs  image_analysis.rs  model.rs  system_prompts.rs  user_intention.rs
ded/src/modes/: ble.rs  chat.rs  chatfile.rs  connections.rs  rpc.rs  (+1 more)
key/: myapp.key  myapp.key.pub
mega-app/: package.json
mega-app/src-tauri/: Cargo.toml  tauri.conf.json
mega-app/src-tauri/src/: lib.rs  main.rs  mega_session.rs
modules/libqaul/: Cargo.toml
modules/mega-rs/: test_rsa.rs
modules/timetable-scrape/: Cargo.toml
modules/timetable-scrape/src/: database.rs  lib.rs  main.rs  scrape.rs  timetable.rs  timetable_types.rs
public/: FULL BLOCK.json  FULL LINESS.geojson  FULL LINESS2.geojson  FULL LINESS2.qmd  FULL LINESS3.geojson  FULL PARKINGB.geojson
public/map/: Mikocheni.geojson  kijitonyama.geojson
src/: App.css  App.tsx  index.css  main.tsx  theme.css
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf copy.json  tauri.conf.json  timetable.db
src-tauri/assets/: convert_to_base64.py
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/log/: rust-mcp-server.log,.2025-12-16
src-tauri/qaul_data/: config.yaml
src-tauri/qaul_data/node.knowlia/: db  snap.00000000000291FF
src-tauri/src/: app.rs  background_tasks.rs  constants.rs  document_viewer.rs  egui_main.rs  file_explorer.rs  lib.rs  ocr.rs  rtsp_player.rs  timetable.rs
src-tauri/src/commands/: flight.rs
src-tauri/src/commands/auth/: mod.rs
src-tauri/src/commands/bolt/: mod.rs
src-tauri/src/commands/gdrive/: download.rs
src-tauri/src/commands/network/: mod.rs
src-tauri/src/contextual_bandit/: manager.rs  neural_ucb_diag.rs  notifications.rs  tests.rs
src-tauri/src/embedding/: mod.rs
src-tauri/src/llm/: chat.rs  local_tools.rs  mcp_client.rs  mcp_server.rs  mod.rs  suggestions.rs  user_intention.rs
src-tauri/src/modes/: debug.rs  dtn.rs  feed.rs  group.rs  node.rs  router.rs  rtc.rs  user_accounts.rs
src-tauri/src/qaul_module/: mod.rs  qaul.rs
src-tauri/src/sql/: main.rs  mod.rs  model.rs
src-tauri/src/sql/queries/: chat.rs  contextual_bandit.rs  mod.rs  tools.rs
src-tauri/src/str0m/: mod.rs  util.rs
src-tauri/src/tauri/: ble.rs  group.rs  mod.rs  rtc.rs  task.rs  timetable.rs  user.rs  zotero.rs  zotero_complete.rs
src-tauri/tauri-app/: package.json  vite.config.ts
src-tauri/tauri-app/src/: App.tsx  rtc.ts
src-tauri/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/tauri-app/src-tauri/src/: group.rs  lib.rs  qaul.rs  rtc.rs  rtc_str0m.rs  user.rs
src-tauri/tauri-app/src-tauri/src/modes/: ble.rs  chat.rs  chatfile.rs  connections.rs  debug.rs  dtn.rs  feed.rs  group.rs  mod.rs  node.rs  router.rs  rpc.rs  rtc.rs  user_accounts.rs  users.rs
src-tauri/tauri-app/src-tauri/user.db/: db  snap.000000000000196F
src-tauri/tauri-app/src-tauri/webrtc_sessions.db/: db
src-tauri/tauri-app/src/hooks/: useRTC.ts
src-tauri/tauri-app/str0m/: Cargo.toml
src-tauri/tauri-app/str0m/examples/: chat.html  chat.rs
src-tauri/tauri-app/str0m/src/: lib.rs
src-tauri/tauri-app/str0m/src/change/: sdp.rs
src-tauri/tauri-app/str0m/src/ice/: candidate.rs
src-tauri/tauri-app/str0m/src/io/: stun.rs
src-tauri/tauri-app/str0m/src/streams/: send.rs
src/components/: ActionPanel.tsx  AlertModal.tsx  AnimatedNetworkStat.tsx  AsMcpServer.tsx  AssistantEnabledIcon.tsx  BanditStatsPanel.tsx  ChatHistory.tsx  CloseAppButton.tsx  ConfigForm.tsx  CreateGroupDialog.tsx  DeveloperSection.tsx  DocumentPreview.tsx  ErrorBoundary.tsx  FormButton.css  FormButton.tsx  GroupList.tsx  InfoTooltip.tsx  LocalToolsCard.tsx  McpServerCard.tsx  MediaPermissionModal.tsx  ModelConfigSection.tsx  NoContent.tsx  ResultDisplay.tsx  SidebarHeader.tsx  SimpleCard.tsx  SimpleDialog.tsx  SimpleTabs.tsx  SimpleTooltip.tsx  TSLAGraph.tsx  ToolsManagement.tsx  UnderConstructionSection.tsx  WindowInfoPanel.tsx  local-image.tsx  sidebar-menu-button.tsx  system-monitor.tsx  tooltip-button.tsx
src/contexts/: ChatContext.tsx  SettingsContext.tsx  SiteContext.tsx  StorageContext.tsx  ThemeContext.tsx
src/data/: mockData.ts
src/hooks/: use-mobile.ts  use-task-store.ts  useAuth.ts  useNetworkNeighbours.ts  useProfile.ts  useRTC.ts
src/lib/: check.ts  globalConfig.ts  shapefile-loader.ts  types.ts  utils.ts
src/messages/: en.json  ja.json  zh.json
src/pages/: Ai.tsx  Avatar.tsx  Avatar_new.tsx  Chat.tsx  Dashboard copy.tsx  Dashboard.tsx  Gpt.tsx  Map.tsx  Settings.tsx  Storage.tsx  Tasks.tsx  Timetable.tsx
src/types/: moodle.ts
src/utils/: auto-refresh.ts  commands.ts  fileTransfer.ts  imageUtils.ts  messageParser.ts  rateLimiter.ts  rtc.ts  tauriUtils.ts
tests/: ~$sample.pptx
(+146 files in other folders)
