[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
tauri-plugin-cache = "0.1.6"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-system-info = { git = "https://github.com/HuakunShen/tauri-plugin-system-info", branch = "v2" }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
libp2p = { version = "0.55.0", features = ["ed25519", "noise", "tcp", "yamux", "macros"] }
log = "0.4"
# Add libqaul as a dependency
libqaul = { path = "../modules/libqaul" }
# Add timetable-scrape as a dependency
timetable-scrape = { path = "../modules/timetable-scrape" }
hex = "0.4"
async-std = "1.12"
bincode = "1.3.3"
base64 = "0.22.1"
sled = { version = "0.34.7", features = ["compression"] }
get_if_addrs = "0.1"
libp2p-identity = "0.2.12"
bs58 = "0.5"
uuid = { version = "1.13", features = ["v4", "serde"] }
prost = "0.14"
state = "0.6"
env_logger = "0.11.8"
#########
reqwest = { version = "0.12.8", features = ["json", "stream"] }
text_trees = "0.1.2"
tokio-util = "0.7.16"
screenshots = "0.8"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
rusqlite = { version = "0.31.0", features = ["load_extension"] } # Updated to match sqlx libsqlite3-sys version
once_cell = "1.21.3"
thiserror = "2.0.16"
flate2 = "1.1.2"
image-compare = "0.5.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokenizers = "0.20.3"
anyhow = "1.0"
sqlite-vec = "0.1.6"
zerocopy = "0.8.27"
rand = "0.9.2"
rand_distr = "0.5.1"
rmcp = { version = "0.7.0", features = [
    "client",
    "server", 
    "transport-child-process",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "macros",
    "base64"
], default-features = false }
schemars = "0.8"
paste = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3.44", features = ["macros", "local-offset"] }
futures = "0.3.31"
ocrs = "0.11.0"
rten = "0.22.1"
rten-tensor = "0.22.1"
axum = "0.8.6"
tauri-plugin-media = "0.1.1"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth" }
#zotero = "0.0.2"
# Add mega-rs as a dependency
mega = { path = "../modules/mega-rs" }

# egui dependencies for web canvas
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
hframe = "0.4.1"
pulldown-cmark = "0.9"
rfd = "0.14"
pdf = "0.8"
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.3"

dotenvy = "0.15"
dirs = "5.0"
urlencoding = "2.1"
scraper = "0.24.0"
encoding_rs = "0.8"
form_urlencoded = "1.2.2"
js-sys = "0.3.82"
directories = "6.0"
ntapi = "0.4.1"
async-trait = "0.1"
tokio-tungstenite = "0.20"
clap = { version = "4.5", features = ["derive"] }
tide = "0.16"
tauri-plugin-mic-recorder = "2.0.0"
str0m = "0.14.1"
rouille = { version = "3.6.2", features = ["ssl"] }
lazy_static = "1.4.0"
rcgen = "0.13"
x509-parser = "0.16"
pem = "3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi",
    "processthreadsapi",
    "psapi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xrandr"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-scanner = "0.31"
ashpd = "0.6"
zbus = "3.14"
gtk = { version = "0.18.2", features = ["v3_24"] }
webkit2gtk = "2.0"
glib = "0.18"
gio = "0.18"
gobject-sys = "0.18"

[profile.release.package.candle-core]
opt-level = 3
[profile.release.package.candle-nn]
opt-level = 3
[profile.release.package.candle-transformers]
opt-level = 3
[profile.release.package.rten]
opt-level = 3
[profile.release.package.rten-tensor]
opt-level = 3
[profile.release.package.egui]
opt-level = 3
[profile.release.package.eframe]
opt-level = 3
[profile.release.package.image]
opt-level = 3
[profile.release.package.libp2p]
opt-level = 3



[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = false
debug = false
debug-assertions = false
incremental = false



