[package]
name = "mega-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mega_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
bincode = "1.3.3"
tauri-build = { version = "2", features = [] }

[dependencies]
bincode = "1.3.3"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Add mega-rs as a dependency
mega = { path = "../../modules/mega-rs" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sled = "0.34"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
simple_logger = "4.0"
