[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
str0m = "0.4"
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
state = "0.6"

libp2p = { version = "0.54", features = ["ed25519", "noise", "tcp", "yamux", "macros"] }
log = "0.4"
# Add libqaul as a dependency
libqaul = { path = "../../../modules/libqaul" }
tauri-plugin-notification = "2"
async-std = "1.12"
bs58 = "0.5"
prost = "0.14"
base64 = "0.21"
hex = "0.4"
lazy_static = "1.4"
